# ChangeLog for dev-python/pymongo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Nov 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-1.1.1.ebuild, +pymongo-1.1.2.ebuild:
  Version bump

  15 Nov 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-1.1.ebuild, +pymongo-1.1.1.ebuild:
  Version bump

  23 Oct 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-1.0.ebuild, +pymongo-1.1.ebuild:
  Version bump

  30 Sep 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-0.16.ebuild, +pymongo-1.0.ebuild:
  Version bump

  16 Sep 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-0.15.2.ebuild, +pymongo-0.16.ebuild:
  Version bump

  13 Sep 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-0.15.1.ebuild, +pymongo-0.15.2.ebuild:
  Version bump

  02 Sep 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-0.15.ebuild, +pymongo-0.15.1.ebuild:
  Version bump

  26 Aug 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-0.14.2.ebuild, +pymongo-0.15.ebuild:
  Version bump

  24 Aug 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-0.14.1.ebuild, +pymongo-0.14.2.ebuild:
  Version bump

  24 Aug 2009; Romain Perier (mrpouet) <mrpouet@gentoo.org>
  pymongo-0.14.1.ebuild:
  Add a || die statement to epydoc, indent (R)DEPEND

  21 Aug 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pymongo-0.13.ebuild, +pymongo-0.14.1.ebuild:
  Version bump

  01 Aug 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  pymongo-0.13.ebuild:
  Pymongo supports Python 2.6 as well. Thanks to Tommy[D]

  31 Jul 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  +pymongo-0.13.ebuild, +metadata.xml:
  New ebuild for bug 279804. Thanks to scarabeus
