@@ -1,4 +1,4 @@
-DIST pymongo-1.1.2.tar.gz 94842 RMD160 fca46f80c4d7509960c593bafbd78b55cd1771f8 SHA1 37e0b2fde69438aa953c9743d1382f32b489903f SHA256 ffdb1cd84e91dc99ddb782b793138d084fc41eb2b1539844a58198ba17c6b660
-EBUILD pymongo-1.1.2.ebuild 933 RMD160 33150b93cf1ed840d60c00e8f6fdc3fba92046ac SHA1 79998d460972cd3b79da0a6ae71854acb23b904f SHA256 7c66b632edd9e127cedab0974f3dcd106b2ed3e774262fd1a414b31f8e31f07c
-MISC ChangeLog 1868 RMD160 1774daea8960c16a472b0a2840edbcdf65999402 SHA1 b3d8069d4875067b950321285cff7c187f88d538 SHA256 e629ccad7e0b1c5871de3513b793acbd30908961eeea6851b312827bf836cfe2
+DIST pymongo-1.2.1.tar.gz 116471 RMD160 ece5d0ae1bd4a491404bada71317f3c374207fc7 SHA1 33c29e1158cf82440ec2a5fe127598607a74468c SHA256 f639e6c177d26eac8abb956249de591632ac049c71838e3a7e0f8492db2896a8
+EBUILD pymongo-1.2.1.ebuild 966 RMD160 b411570cdeb1a5ba8c92a9413e24ac04f0931346 SHA1 8e28edd827fafcec1dd49bf666a53762c0cd6393 SHA256 d4593b02db8cb23ce8d06054b157553afff7751c6b418bfaed3f80398be3d558
+MISC ChangeLog 2053 RMD160 9b77b38ce10b7a88e80eb91e904af97efefa26f5 SHA1 fab07510d97e8db6b735ae29bd311af28f0a607f SHA256 af4272f7708a3f912505ac55b606ce788e0d3cc61c47dde488d0993ee9ceb6b1
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
