@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Dec 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
+  -pymongo-1.1.2.ebuild, +pymongo-1.2.1.ebuild:
+  Version bump. Docs are now generated with sphinx instead of epydoc
+
   24 Nov 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
   -pymongo-1.1.1.ebuild, +pymongo-1.1.2.ebuild:
   Version bump
